Add theme color meta tag to index.html
This change adds a new meta tag with the name "theme-color" and the content "#D8DCB4" to the index.html file.

--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Belt of Destiny" />
+    <meta name="theme-color" context="#D8DCB4" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
